syntax = "proto3";

package article;
option go_package = "article/pb";

message Article {
    int64 id = 1;
    string author = 2;
    string title = 3;
    string content = 4;
}

message CreateInput {
    string author = 1;
    string title = 2;
    string content = 3;
}

message CreateArticleRequest {
    CreateInput createInput = 1;
}

message CreateArticleResponse {
    Article article = 1;
}

message ReadArticleRequest {
    string id = 1;
}

message ReadArticleResponse {
    Article article = 1;
}

message UpdateArticleRequest {
    Article article = 1;
}

message UpdateArticleResponse {
    Article article = 1;
}

message DeleteArticleResponse {
    string id = 1;
}

message DeleteArticleRequest {
    string id = 1;
}